@@ -138,7 +138,9 @@ class JavaPlatformModuleSystem : JavaModuleSystemEx {
         }
       }
 
-      if (useModule != null && !(targetName == PsiJavaModule.JAVA_BASE || JavaModuleGraphUtil.reads(useModule, targetModule))) {
+      if (useModule != null &&
+          !(targetName == PsiJavaModule.JAVA_BASE || JavaModuleGraphUtil.reads(useModule, targetModule)) &&
+          !inAddedReads(useModule, targetModule)) {
         return when {
           quick -> ERR
           PsiNameHelper.isValidModuleName(targetName, useModule) -> ErrorWithFixes(
@@ -150,7 +152,9 @@ class JavaPlatformModuleSystem : JavaModuleSystemEx {
     }
     else if (useModule != null) {
       val autoModule = detectAutomaticModule(target)
-      if (autoModule == null || !JavaModuleGraphUtil.reads(useModule, autoModule) && !inSameMultiReleaseModule(place, target)) {
+      if ((autoModule == null) || ((!JavaModuleGraphUtil.reads(useModule, autoModule) && !inAddedReads(useModule, null)) &&
+                                   !inSameMultiReleaseModule(place, target))
+        ) {
         return if (quick) ERR else ErrorWithFixes(JavaErrorBundle.message("module.access.to.unnamed", packageName, useModule.name))
       }
     }
@@ -213,6 +217,20 @@ class JavaPlatformModuleSystem : JavaModuleSystemEx {
       .flatMap { it.splitToSequence(",") }
       .any { it == moduleName || it == "ALL-SYSTEM" || it == "ALL-MODULE-PATH" }
   }
+
+  private fun inAddedReads(fromJavaModule: PsiJavaModule, toJavaModule: PsiJavaModule?): Boolean {
+    val fromModule = ModuleUtilCore.findModuleForPsiElement(fromJavaModule) ?: return false
+    val options = JavaCompilerConfigurationProxy.getAdditionalOptions(fromModule.project, fromModule)
+    return JavaCompilerConfigurationProxy.optionValues(options, "--add-reads")
+      .flatMap { it.splitToSequence(",") }
+      .any {
+        val (optFromModuleName, optToModuleName) = it.split("=").apply { it.first() to it.last() }
+        fromJavaModule.name == optFromModuleName &&
+        (toJavaModule?.name == optToModuleName || (optToModuleName == "ALL-UNNAMED" && isUnnamedModule(toJavaModule)))
+      }
+  }
+
+  private fun isUnnamedModule(module: PsiJavaModule?) = module == null || module is LightJavaModule
 
   private abstract class CompilerOptionFix(private val module: Module) : IntentionAction {
     @NonNls override fun getFamilyName() = "Fix compiler option" // not visible
